# fastapi-sse-neo4j-mcp

./: README.md  pyproject.toml
app/: main.py  sse.py
